# RustExperimentBook

./: Cargo.toml
chapter2/src/: main.rs
rust-book-chapter3/chapter3/src/: main.rs
src/: chp_four_ownership.rs  chp_three_common_programming_concepts.rs  chp_three_ending_exercises.rs  chp_two_guessing_game.rs  main.rs  test.rs
