[package]
name = "brownUnivBookCode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5" #Import the random "rand" dependancy from cargo.
#Use cargo build to install this after adding it to toml

